Implement native wiki route enhancements
